--- a/pdf_generator/templates/pdf_generator/index.html
+++ b/pdf_generator/templates/pdf_generator/index.html
@@ -1,3 +1,10 @@
 <h1>This is the home page</h1>
 
+<form action="{% url 'pdf_generator:index' %}" method="POST">
+    {% csrf_token %}
+    <table>
+        {{ form.as_table }}
+    </table>
+    <input type="submit" value="submit">
+</form>
 <a href="{% url 'pdf_generator:generate_pdf' %}">Generate PDF</a>
