--- a/pdf_generator/templates/pdf_generator/index.html
+++ b/pdf_generator/templates/pdf_generator/index.html
@@ -7,4 +7,4 @@
     </table>
     <input type="submit" value="submit">
 </form>
-<a href="{% url 'pdf_generator:generate_pdf' %}">Generate PDF</a>
+<a href="{% url 'pdf_generator:generate-pdf' %}">Generate PDF</a>
