pdf template development

--- a/pdf_generator/templates/pdf_generator/hello.html
+++ b/pdf_generator/templates/pdf_generator/hello.html
@@ -5,6 +5,17 @@
 	}
 	p {
 		font-family: "Times New Roman", Times, serif;
+		font-size: 13px;
+	}
+	tbody {
+		font-family: "Times New Roman", Times, serif;
+		font-size: 13px;
+	}
+	td {
+		padding: 5px;
+	}
+	.right {
+		text-align: right;
 	}
 </style>
 <div class="center">
@@ -15,23 +26,110 @@
 	</p>
 </div>
 
-<div class="body">
-	<table>
-		<tbody>
-			<tr>
-				<td><strong>Objective</strong></td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>To obtain a position with...</td>
-			</tr>
-		</tbody>
-	</table>
+<div style="height:45px; width:100%;">
+	<div style="width:80px; float:left;">
+		<div>
+			<table style="width:100%;">
+				<tr>
+					<td><b>Objective</b></td>
+				</tr>
+			</table>
+		</div>
+	</div>
+	<div style="width:500px; float:right;">
+		<div>
+			<table style="width:100%;">
+				<tr>
+					<td>To obtain and Aviation Safety Inspector position with the FAA.</td>
+				</tr>
+			</table>
+		</div>
+	</div>
 </div>
+
+<div style="height:45px; width:100%;">
+	<div style="width:80px; float:left;">
+		<div>
+			<table style="width:100%;">
+				<tr>
+					<td><b>Education</b><br />
+						<br />
+						<br />
+						<br />
+					</td>
+				</tr>
+			</table>
+		</div>
+	</div>
+	<div style="width:500px; float:right;">
+		<div>
+			<table style="width:100%;">
+				<tr>
+					<td>
+						Bachelor of Science in Aeronautics <em>Cum Laude</em>, December 2017<br />
+						Major: <b>Commercial Aviation</b><br />
+						University of North Dakota<br />
+						Grand Forks, ND
+					</td>
+				</tr>
+			</table>
+		</div>
+	</div>
+</div>
+
+<div style="height:45px; width:100%;">
+	<div style="width:80px; float:left;">
+		<div>
+			<table style="width:100%;">
+				<tr>
+					<td><b>Flight Hours</b><br /><br /><br /></td>
+				</tr>
+			</table>
+		</div>
+	</div>
+	<div style="width:500px; float:right;">
+		<div>
+			<table style="width:100%">
+				<tr>
+					<td><b>Total Time 1,969</b></td>
+					<td>PIC 804</td>
+					<td>Multi-Engine 1,395</td>
+				</tr>
+				<tr>
+					<td>Instrument 74</td>
+					<td>Instructor 630</td>
+					<td>Turbine SIC 1,011</td>
+				</tr>
+			</table><br />
+		</div>
+	</div>
+</div>
+
+<div style="height:45px; width:100%;">
+	<div style="width:80px; float:left;">
+		<div>
+			<table style="width:100%;">
+				<tr>
+					<td><b>Certificates & Ratings</b><br />
+					</td>
+				</tr>
+			</table>
+		</div>
+	</div>
+	<div style="width:500px; float:right;">
+		<div>
+			<table style="width:100%;">
+				<tr>
+					<td>
+						Airline Transport Pilot: AMEL, CL-65 type rating<br />
+						Commercial Pilot: ASEL, Instrument<br />
+						Certified Flight Instructor: ASE, AME, Instrument<br />
+						FAA First Class Medical Certificate<br />
+						US Passport: Current, Unrestricted
+					</td>
+				</tr>
+			</table>
+		</div>
+	</div>
+</div>
+
